--- a/unbranded-crisis/unbranded-crisis-7/index.html
+++ b/unbranded-crisis/unbranded-crisis-7/index.html
@@ -28,7 +28,13 @@
                             Are you in crisis? We provide urgent care and support to help you find stability and
                             recovery.
                         </p>
-                        <a href="tel:+8447227147" class="header__link">Get Immediate Help</a>
+                        <form id="conversionForm" action="/convert" method="post">
+                          <input type="hidden" name="user_type" value="{{ user_type }}" />
+                          <input type="hidden" name="template" value="template1.html" />
+                          <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                          <button type="submit" class="header__link" onclick="handleSubmit(event)">Get Immediate Help
+                          </button>
+                      </form>
                     </div>
                 </div>
 
@@ -44,7 +50,13 @@
                             the
                             urgency and are here to offer the support you need to regain control and start your recovery
                             journey.</p>
-                        <a href="tel:+8447227147" class="header__bottom-link">Learn More About Our Crisis Services</a>
+                        <form id="conversionForm" action="/convert" method="post">
+                          <input type="hidden" name="user_type" value="{{ user_type }}" />
+                          <input type="hidden" name="template" value="template1.html" />
+                          <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                          <button type="submit" class="header__bottom-link" onclick="handleSubmit(event)">Learn More About Our Crisis Services
+                          </button>
+                      </form>
                     </div>
                 </div>
             </div>
@@ -199,7 +211,13 @@
                 </div>
                 <p class="text">Our programs are tailored to meet your urgent needs and help you find stability and
                     peace.</p>
-                <a href="tel:+8447227147" class="programs__link">Discover Our Programs</a>
+                <form id="conversionForm" action="/convert" method="post">
+                  <input type="hidden" name="user_type" value="{{ user_type }}" />
+                  <input type="hidden" name="template" value="template1.html" />
+                  <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                  <button type="submit" class="programs__link" onclick="handleSubmit(event)">Discover Our Programs
+                  </button>
+              </form>
             </div>
         </div>
     </div>
@@ -475,7 +493,13 @@
                 </div>
                 <p class="text">Our programs are tailored to meet your urgent needs and help you find stability and
                     peace.</p>
-                <a href="tel:+8447227147" class="programs__link">Discover Our Programs</a>
+                <form id="conversionForm" action="/convert" method="post">
+                  <input type="hidden" name="user_type" value="{{ user_type }}" />
+                  <input type="hidden" name="template" value="template1.html" />
+                  <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                  <button type="submit" class="programs__link" onclick="handleSubmit(event)">Discover Our Programs
+                  </button>
+              </form>
             </div>
         </div>
     </div>
@@ -625,7 +649,13 @@
                         <p class="rapid__box-text">A safe place to heal and recover.</p>
                     </div>
                 </div>
-                <a href="tel:+8447227147" class="why__link">Find Out More</a>
+                <form id="conversionForm" action="/convert" method="post">
+                  <input type="hidden" name="user_type" value="{{ user_type }}" />
+                  <input type="hidden" name="template" value="template1.html" />
+                  <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                  <button type="submit" class="why__link" onclick="handleSubmit(event)">Find Out More
+                  </button>
+              </form>
             </div>
         </div>
     </section>
@@ -638,7 +668,13 @@
                     <p class="team__text">Our team of crisis intervention professionals is dedicated to providing
                         compassionate care and immediate support. Meet the experts who will help you through this
                         challenging time.</p>
-                    <a href="tel:+8447227147" class="team__link">Meet Our Team</a>
+                    <form id="conversionForm" action="/convert" method="post">
+                      <input type="hidden" name="user_type" value="{{ user_type }}" />
+                      <input type="hidden" name="template" value="template1.html" />
+                      <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                      <button type="submit" class="team__link" onclick="handleSubmit(event)">Meet Our Team
+                      </button>
+                  </form>
                 </div>
             </div>
         </div>
@@ -723,7 +759,13 @@
                         <p class="start__box-text">Start your recovery journey immediately.</p>
                     </div>
                 </div>
-                <a href="tel:+8447227147" class="start__link">Get Help Now</a>
+                <form id="conversionForm" action="/convert" method="post">
+                  <input type="hidden" name="user_type" value="{{ user_type }}" />
+                  <input type="hidden" name="template" value="template1.html" />
+                  <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                  <button type="submit" class="start__link" onclick="handleSubmit(event)">Get Help Now
+                  </button>
+              </form>
             </div>
         </div>
     </section>
@@ -733,7 +775,13 @@
                 <h2 class="title">Contact Us</h2>
                 <p class="text">If you or a loved one in crisis, contact us immediately. We're here to help you find
                     safety and start the path to recovery.</p>
-                <a href="tel:+8447227147" class="contact__link">Call Now Today</a>
+                <form id="conversionForm" action="/convert" method="post">
+                  <input type="hidden" name="user_type" value="{{ user_type }}" />
+                  <input type="hidden" name="template" value="template1.html" />
+                  <input type="hidden" name="unique_id" value="{{ unique_id }}">
+                  <button type="submit" class="contact__link" onclick="handleSubmit(event)">Call Now Today
+                  </button>
+              </form>
             </div>
         </div>
     </section>
